<resources>

    <string name="app_name">LibraryManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_fragmentTabs">Tabs</string>
    <string name="TitleLabel">Title : </string>
    <string name="AuthorLabel">Author : </string>
    <string name="CourseLabel">Course : </string>
    <string name="TotalCostLabel">Total cost : </string>
    <string name="MostExpensiveItemLabel">Most expensive item : </string>
    <string name="LeastExpensiveItemLabel">Least expensive item : </string>
    <string name="AverageItemLabel">Average item : </string>
    <string name="PriceLabel">Price : </string>
    <string name="ISBNLabel">ISBN : </string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_library_management">LibraryManagement</string>
    <string name="title_activity_fragmentTab">Tab</string>
    <string name="title_activity_test">Test</string>
    <string name="add_button">Add</string>
    <string name="add_icon">plus.png</string>
    <string name="validate_icon">validate.jpg</string>
    <string name="title_activity_book_edit">Book_edit</string>
    <string name="book_detail_title">Detail</string>
    <string name="book_edit_title">Title</string>
    <string name="book_edit_author">Author</string>
    <string name="book_edit_course">Course</string>
    <string name="book_edit_isbn">ISBN</string>
    <string name="book_edit_price">Price</string>
    <string name="book_edit_popup">You have to enter a title</string>

</resources>